Fixing image alignment.

--- a/theme/default/css/style.less
+++ b/theme/default/css/style.less
@@ -114,6 +114,7 @@ div.imageholder-wide {
     border: 1px solid #BBBBBB;
     box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.3);
     padding: 2px;
+    vertical-align: bottom;
 }
 
 div.imageholder-wide img {
